# ivre

./: .codeclimate.yml  .codecov.yml  .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  Basic_Port_Scanner.py  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTION.md  CONTRIBUTORS.md  MANIFEST  MANIFEST.in  README.md  builddocs  builddocs.py  buildrpm  pyproject.toml  requirements-all.txt  requirements-doc.txt  requirements-elastic.txt  requirements-linting.txt  requirements-maxmind-26.txt  requirements-maxmind-33.txt  requirements-maxmind.txt  requirements-mongo-26.txt  requirements-mongo-33.txt  requirements-mongo.txt  requirements-mongosrv.txt  requirements-neo4j.txt  requirements-postgres-26.txt  requirements-postgres-33.txt  requirements-postgres.txt  requirements-sqlite-26.txt  requirements-sqlite-33.txt  requirements-sqlite.txt  requirements-tinydb-27.txt  requirements-tinydb.txt  requirements.txt  setup.cfg  (+3 more)
.github/: CONTRIBUTING.md  FUNDING.yml  ISSUE_TEMPLATE.md  issue_template.md
.github/workflows/: doc.yml  docker.yml  documentdb.yml  duckdb.yml  elastic.yml  linting.yml  maxmind.yml  mongodb.yml  nobackend.yml  packages.yml  postgres.yml  regen.yml  sqlite.yml  tinydb.yml  web-ui.yml
.travis/: codespell_ignore  install_elastic.sh  install_maxmind.sh  install_mongo.sh  install_neo4j.sh  install_postgres.sh  install_sqlite.sh  install_tinydb.sh  ivre.conf  script.sh
agent/: agent  sync
bash_completion/: ivre
bro/: passiverecon.bro
bro/flow/: __load__.bro  dhcp_names.bro  settings.bro
bro/ivre/: __load__.bro  dhcp_names.bro
data/: cdn_nuclei.json  cdn_nuclei.py  censys_scanners.txt  govcloud.json  govcloud.py  govcloud_aws.json  govcloud_azure.json  ike-vendor-ids  manuf  rapid7_scanners.txt  ssigouvfr_scanners.txt  ukncsc_scanners.txt
doc/: AGENT.md  DOCKER.md  FAQ.md  FAST-INSTALL-AND-FIRST-RUN.md  FLOW.md  INSTALL.md  LICENSE-EXTERNAL.md  LICENSE.md  README.md  SCREENSHOTS.md  TESTS.md  WEBUI.md  conf.py  index.rst  license-external.rst  license.rst  screenshots.rst
doc/dev/: audit.rst  benchmarks.rst  index.rst  linting.rst  tests.rst  web-api.rst
doc/install/: agents.rst  config.rst  docker.rst  fast-install-and-first-run.rst  fast-install-py3.rst  index.rst  installation.rst
doc/overview/: faq.rst  principles.rst  screenshots.rst
doc/screenshots/: passive-cli.cast  passive-view-cli.cast
doc/usage/: active-recon.rst  flow.rst  index.rst  kibana.rst  mcp-server.rst  passive.rst  use-cases.rst  web-auth.rst  web-ui.rst
docker/: Vagrantfile  docker-compose.yml  ivre.conf
docker/agent/: Dockerfile  runagent
docker/base/: Dockerfile  ivre.conf
docker/base-local/: Dockerfile
docker/base-local-3/: Dockerfile  ivre.conf
docker/base-pip/: Dockerfile  ivre.conf
docker/client/: Dockerfile  http-screenshot.nse  screenshot.js
docker/client-3/: Dockerfile
docker/db/: Dockerfile  run.sh
docker/web/: Dockerfile  doku-conf-acl.auth.php  doku-conf-local.php  doku-conf-plugins.local.php  doku-conf-users.auth.php  ivre-scanjsonconfig.py  nginx-default-site
docker/web-apache/: Dockerfile  doku-conf-local.php
docker/web-doku/: Dockerfile  doku-conf-local.php  doku-conf-users.auth.php
docker/web-mcp/: Dockerfile
docker/web-uwsgi/: Dockerfile
honeyd/: sshd
ivre/: __init__.py  activecli.py  agent.py  analyser.py  analyzer.py  cli.py  cliutils.py  config.py  db.py  flow.py  geoiputils.py  graphroute.py  httpagent.py  keys.py  mathutils.py  nmapopt.py  nmapout.py  passive.py  plugins.py  scanengine.py  target.py  utils.py  view.py  webutils.py  xmlnmap.py  zgrabout.py
ivre/active/: cpe.py  data.py  nmap.py
ivre/analyzer/: dicom.py  dns.py  ike.py  ja3.py  ntlm.py
ivre/cmd/: __init__.py  getmoduli.py  httpd.py  ipinfo.py  scanstatus.py
ivre/data/: govcloud.py  scanners.py  windows.py
ivre/db/: __init__.py  document.py  elastic.py  http.py  maxmind.py  mongo.py  neo4j.py  postgres.py  tiny.py
ivre/parser/: __init__.py  airodump.py  argus.py  bro.py  iptables.py  netflow.py  p0f.py  weblog.py  zeek.py
ivre/tags/: __init__.py  active.py
ivre/tools/: __init__.py  airodump2db.py  analyzercli.py  arp2db.py  auditcli.py  auditdom.py  audittor.py  authcli.py  bench.py  bro2db.py  db2view.py  flow2db.py  flowcli.py  getmoduli.py  getwebdata.py  httpd.py  ipcalc.py  ipdata.py  iphost.py  ipinfo.py  ipinfohost.py  iprange.py  localscan.py  macdata.py  macinfo.py  notes.py  p0f2db.py  passiverecon2db.py  passivereconworker.py  plotdb.py  rirlookup.py  runscans.py  runscansagent.py  runscansagentdb.py  scan2db.py  scancli.py  scanstatus.py  sort.py  version.py  view.py  (+3 more)
ivre/types/: __init__.py  active.py  flow.py
ivre/web/: app.py  audit_hook.py  auth.py  base.py  commonutils.py  managementutils.py  modules.py  oauth.py  securitymiddleware.py  utils.py
nmap_scripts/: http-screenshot.nse  mainframe-banner.nse  mainframe-screenshot.nse  rtsp-screenshot.nse  vnc-screenshot.nse  x11-screenshot.nse
nmap_scripts/patches/: rtsp-url-brute.patch
passiverecon/: flow.bro  passiverecon.bro  passiverecon2db-ignore.example
passiverecon/flow/: __load__.bro  rpc.bro  settings.bro
patches/dokuwiki/: backlinks-20200729.patch  backlinks.patch
patches/nmap/: pr-2142.patch  pr-2229.patch
patches/p0f/: p0f.fp.patch
pkg/: PKGBUILD  PKGBUILD-python2  buildabuse  builddockers  builddocs  buildexch  buildmanuf  buildrpm  buildwebui  codespell_ignore  runchecks
pkg/alpine/: APKBUILD
pkg/apache/: ivre.conf
pkg/arch/: PKGBUILD
pkg/nginx/: ivre.conf
pkg/stubs/: bottle.pyi
src/ivre/: __init__.py  agent.py  geoiputils.py  graphroute.py  keys.py  mathutils.py  nmapopt.py  view.py  zgrabout.py
tests/: .coveragerc  iptables-samples  results-public-samples  run  test_params_regex.js  tests.py  tests_no_backend.py
tests/samples/: results  results_zeek_v4
web-ui/: .gitignore  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
web-ui/e2e/: smoke.spec.ts
web-ui/src/: App.tsx  (+3 more)
zeek/: passiverecon2db-ignore.example
(+382 files in other folders)
