[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ivre"
dynamic = ["version"]
description = "Network recon framework"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.12, <4"
authors = [{ name = "Pierre LALET", email = "pierre@droids-corp.org" }]
keywords = [
    "network",
    "network recon",
    "network cartography",
    "nmap",
    "masscan",
    "zmap",
    "zgrab",
    "zdns",
    "bro",
    "zeek",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Security",
    "Topic :: System :: Networking",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: System :: Software Distribution",
]
dependencies = [
    "cryptography",
    "defusedxml",
    "pymongo>=4.10",
    "pyOpenSSL>=16.1.0",
    "bottle",
]

[project.optional-dependencies]
postgres = ["sqlalchemy<2", "psycopg2"]
elasticsearch = ["elasticsearch", "elasticsearch-dsl"]
gssapi-mongo = ["gssapi"]
gssapi-http = ["pycurl"]
screenshots = ["Pillow"]
mediawiki = ["mysqlclient"]
3d-traceroute = ["dbus-python"]
plots = ["matplotlib"]
ja3 = ["scapy"]
mcp = ["mcp"]
linting = ["bandit", "black", "codespell", "flake8", "mypy", "pylint", "rstcheck[sphinx]", "sphinx-lint"]
doc = ["Sphinx", "docutils!=0.18", "sphinx_rtd_theme", "sphinxcontrib-httpdomain"]

[project.urls]
Homepage = "https://ivre.rocks/"
Repository = "https://github.com/ivre/ivre"
Download = "https://github.com/ivre/ivre/tarball/master"

[project.scripts]
ivre = "ivre.cli:main"

[tool.setuptools.packages.find]
include = ["ivre*"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
tag_regex = "^v?(?P<version>.+)$"
fallback_version = "0.0.0"
version_file = "ivre/_version.py"

[tool.rstcheck]
ignore_directives = ["autobottle", "graphviz"]
ignore_messages = '(Link is formatted in Markdown style\.$)'
